Fixed spacing and layout

--- a/web/stylesheet.css
+++ b/web/stylesheet.css
@@ -134,7 +134,7 @@ body {
     margin: 10px auto;
     color: black;
     background-color: rgba(255, 255, 255, 0.4);
-    width: 90%;
+    width: 900px;
     font-size: 1.2em;
     border: 2px solid #060091;
     border-radius: 20px;
@@ -143,8 +143,9 @@ body {
 #assignments-page
 {
     padding: 5px;
-    margin: 0px 0px 0px 10px;
-    font-size: 1.3em;
+    text-align: center;
+    font-size: 1em;
+    margin-bottom: 10px;
     color: #000000;
     background-color: whitesmoke;
     border-radius: 10px;
